# uri_torture_test

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
tests/: conftest.py  test_models.py
tests/fixtures/: corner_cases.json  gold_standard_uris.json  invalid_uris.json  invalid_uris_challenge.json  silver_standard_uris.json
uri_torture_test/: models.py
